src/objects/ECO_Project_Cloning__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Contains object names and associated fieldset names used when programmatically cloning a project</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If active then the associated object will be processed by the project cloning service</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_SOQL_Where_Filter__c</fullName>
        <description>Additonal filter added to soql when retrieving records relevant to the custom setting, &apos;where&apos; clause is not required in this string. 
ex) &apos;ParentId not null&apos;</description>
        <label>Additional SOQL Where Filter</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fieldset_API_Name__c</fullName>
        <description>API name of fieldset for object used to determine what fields for the source object need to be copied over to the target object</description>
        <label>Fieldset API Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <description>API name of object</description>
        <label>Object API Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Object_API_Name__c</fullName>
        <description>Object API name of parent object</description>
        <label>Parent Object API Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Processing_Level__c</fullName>
        <description>Processing level of the parent object that this object is dependent on. Used to map children to parent  objects during the cloning process.</description>
        <label>Parent Processing Level</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Processing_Order__c</fullName>
        <description>Order that the object should be processed when cloning a project.</description>
        <label>Processing Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Use_Batch_Apex__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked this setting will be processed  via a batch apex class</description>
        <label>Use Batch Apex</label>
        <type>Checkbox</type>
    </fields>
    <label>ECO Project Cloning</label>
</CustomObject>